--- a/developers.html
+++ b/developers.html
@@ -5,7 +5,7 @@
 <head>
 	
 	<meta charset="utf-8">
-	<meta name="description" content="Startup Matchmaker homepage">
+	<meta name="description" content="Startup Matchmaker for developers">
 	<meta name="keywords" content="">
 	<meta name="author" content="Trevor Lazarus">
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:700,700italic' rel='stylesheet' type='text/css'>
@@ -14,7 +14,7 @@
 	<link type="text/css"; rel="stylesheet"; href="css/normalize.css">
 	<link type="text/css"; rel="stylesheet"; href="css/reset.css">
 	<link type="text/css"; rel="stylesheet"; href="css/style.css">
-	<title>Startup Matchmaker</title>
+	<title>Startup Matchmaker-Developers</title>
 
 </head>
 
