--- a/index.html
+++ b/index.html
@@ -37,19 +37,39 @@
 	</header>
 
 	<div class="motto">
-		<h2>Because two brains <span class="line-through">taste</span> <span class="underline">are</span> better than one.</h2>
+		<h2>Because two brains <!--span class="line-through">--><del>taste</del><!--/span--><!--span class="underline"--> <ins>are</ins><!--/span--> better than one.</h2>
 	</div>
 
 	<div class="splash-image">
 		<div class="splash-overlay">
 			<h3>Meet your Match!</h3>
-			<p>Have a great idea for a product, but need help making it a reality? We're here to help. Startup Matchmaker is the best place for designers and developers to find each other.</p>
+			<p class="button">Have a great idea for a product, but need help making it a reality? We're here to help. Startup Matchmaker is the best place for designers and developers to find each other.</p>
 			<a class="button" href="#">CREATE A PROFILE</a><!--should this have been a button tag?-->
+		</div>
+	</div>
+
+	<div class="cta-rail">
+		<div class="cta">
+			<h2>Create a Profile</h2>
+			<p class="button">Are you a Designer? Developer? Put yourself out there so that others can find you!</p>
+			<a class="button signup" href="#">SIGN UP NOW</a>
+		</div>
+		<div class="cta" id="middle">
+			<h2>Find a Developer</h2>
+			<p class="button">Looking for a fantastic developer to work with on the next big thing? Look no further.</p>
+			<a class="button startsearch" href="#">START YOUR SEARCH</a>
+		</div>
+		<div class="cta">
+			<h2>Find a Designer</h2>
+			<p class="button">Need someone who can make a product intuitive and appealing? Get ready.</p>
+			<a class="button startsearch" href="#">START YOUR SEARCH</a>
 		</div>
 	</div>
 	
 	<footer>
 		<p>&copy; 2013 Startup Matchmaker. Made in NY.</p>
 	</footer>
+
+</body>
 
 </html>
