First Round Finished

--- a/developers.html
+++ b/developers.html
@@ -6,7 +6,7 @@
 	
 	<meta charset="utf-8">
 	<meta name="description" content="Startup Matchmaker for developers">
-	<meta name="keywords" content="">
+	<meta name="keywords" content="Startup Matchmaker Designer Developer idea product help entrepreneur profile profiles develop code engineer participate signup">
 	<meta name="author" content="Trevor Lazarus">
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:700,700italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
